// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spanish language Empty input 1`] = `
Array [
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Deshumidificador Eléctrico portátil",
  },
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Cepillo de dientes eléctrico",
  },
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Cable de USB A a Lightning",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Pack de 24 pilas alcalinas AA",
  },
]
`;

exports[`Spanish language Equality 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "[Cepillo] [de] [dientes] [eléctrico]",
  },
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Deshumidificador [Eléctrico] portátil",
  },
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Cable [de] USB A a Lightning",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Pack [de] 24 pilas alcalinas AA",
  },
]
`;

exports[`Spanish language Normalization 1`] = `
Array [
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Deshumidificador [Eléctric]o [portá]til",
  },
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Cepillo de dientes [eléctric]o",
  },
]
`;

exports[`Spanish language Partiles 1`] = `
Array [
  Object {
    "id": 40,
    "rating": undefined,
    "title": "[De]shumidificador Eléctrico portátil",
  },
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Cepillo [de] dientes eléctrico",
  },
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Cable [de] USB A a Lightning",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Pack [de] 24 pilas alcalinas AA",
  },
]
`;

exports[`Spanish language Stemming 1`] = `
Array [
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Pack de 24 pilas [alcalin]as AA",
  },
]
`;
